--- a/Projects/Lazarus/LccEmpireModeler/empiremodeler.lpi
+++ b/Projects/Lazarus/LccEmpireModeler/empiremodeler.lpi
@@ -36,7 +36,7 @@
         <PackageName Value="LCL"/>
       </Item2>
     </RequiredPackages>
-    <Units Count="4">
+    <Units Count="6">
       <Unit0>
         <Filename Value="empiremodeler.lpr"/>
         <IsPartOfProject Value="True"/>
@@ -65,6 +65,20 @@
         <ResourceBaseClass Value="Form"/>
         <UnitName Value="unitsegmentwizardform"/>
       </Unit3>
+      <Unit4>
+        <Filename Value="ObjectOptionsForms\turnoutoptions.pas"/>
+        <IsPartOfProject Value="True"/>
+        <ComponentName Value="FormTurnoutOptions"/>
+        <ResourceBaseClass Value="Form"/>
+        <UnitName Value="turnoutoptions"/>
+      </Unit4>
+      <Unit5>
+        <Filename Value="ObjectOptionsForms\signalheadoptions.pas"/>
+        <IsPartOfProject Value="True"/>
+        <ComponentName Value="FormSignalHeadOptions"/>
+        <ResourceBaseClass Value="Form"/>
+        <UnitName Value="signalheadoptions"/>
+      </Unit5>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
@@ -75,6 +89,7 @@
     </Target>
     <SearchPaths>
       <IncludeFiles Value="$(ProjOutDir)"/>
+      <OtherUnitFiles Value="ObjectOptionsForms"/>
       <UnitOutputDirectory Value="lib\$(TargetCPU)-$(TargetOS)"/>
     </SearchPaths>
     <Conditionals Value="if TargetOS = 'darwin' then
